--- a/sass/layout/_footer.scss
+++ b/sass/layout/_footer.scss
@@ -5,6 +5,13 @@ footer {
 // @media all and (max-width: 768px) {
     footer {
         @include phone-footer;
+        h3{
+            font-family: Shrikhand;
+            font-size: 30px;
+            font-weight: 400;
+            color: #fff;
+            padding: 30px 0 15px 15px;
+        }
     }
 
 // }
