--- a/sass/pages/_desktop-homepage.scss
+++ b/sass/pages/_desktop-homepage.scss
@@ -20,11 +20,11 @@
 
 .loading {
     img {
-        width: 250px;
+        width: 230px;
         animation: hideLoading 2s forwards;
         position: absolute;
-        left: 280px;
-        bottom: 286px;
+        left: 655px;
+        bottom: 70px;
     }
 }
 
@@ -86,9 +86,9 @@
 
     h1 {
         font: {
-            family: $text-font;
+            family: $main-font;
             size: 30px;
-            weight: 700;
+            weight: 100;
         }
     }
 
@@ -135,15 +135,15 @@
 
     h2 {
         font: {
-            family: $text-font;
+            family: $main-font;
             size: 40px;
-            weight: 700;
+            weight: 100;
         }
     }
 }
 
 .btn-wrap {
-    width: 35%;
+    width: 37%;
     display: flex;
     flex-direction: row;
     justify-content: flex-start;
@@ -211,23 +211,26 @@
 
     h3 {
         padding: 10px 0px 20px 30px;
-        width: auto;
+        width: 100%;
 
         font: {
             size: 25px;
-            family: $text-font;
-            weight: 700;
+            family: $main-font;
+            weight: 100;
         }
     }
 }
 
 .rst-ad {
+    position: relative;
     background-color: #fff;
     border-radius: 18px;
     display: flex;
     flex-direction: column;
     align-items: flex-start;
     justify-content: flex-start;
+    margin: 20px auto;
+    width: 360px;
 
     a {
         text-decoration: none;
@@ -245,7 +248,8 @@
     }
 
     img {
-        width: 320px;
+        width: 360px;
+        height: 170px;
         border-radius: 18px 18px 0 0;
     }
 }
@@ -259,6 +263,7 @@
 }
 
 .info {
+    padding: 10px 0;
 
     h4 {
         color: #000;
@@ -266,9 +271,9 @@
         padding: 2px 0;
 
         font: {
-            family: $text-font;
+            family: $main-font;
             size: 20px;
-            weight: 800;
+            weight: 100;
         }
     }
 
@@ -278,7 +283,6 @@
         font: {
             family: $text-font;
             size: 20px;
-            weight: 400;
         }
     }
 }
