--- a/sass/pages/_phone-homepage.scss
+++ b/sass/pages/_phone-homepage.scss
@@ -17,7 +17,7 @@
             animation: hideLoading 2s forwards;
             position: absolute;
             bottom: 304px;
-            left: 123px;
+            left: 163px;
         }
     }
 
@@ -59,6 +59,11 @@
                 family: $text-font;
             }
         }
+
+        i {
+            margin: 15px 17px 15px 62px;
+            font-size: 19px;
+        }
     }
 
     .fa-map-marker-alt {
@@ -73,9 +78,9 @@
 
         h1 {
             font: {
-                family: $text-font;
+                family: $main-font;
                 size: 27px;
-                weight: 700;
+                weight: 100;
             }
         }
 
@@ -119,9 +124,9 @@
 
         h2 {
             font: {
-                family: $text-font;
+                family: $main-font;
                 size: 25px;
-                weight: 700;
+                weight: 100;
             }
         }
     }
@@ -189,20 +194,22 @@
         flex-direction: column;
         background-color: $third-color;
         padding: 15px 0 50px 0;
+        align-content: center;
 
         h3 {
             width: auto;
+
             font: {
                 size: 25px;
-                family: $text-font;
-                weight: 700;
+                family: $main-font;
+                weight: 100;
             }
-
-            // padding: 40px 0 0px 30px;
         }
     }
 
     .rst-ad {
+        width: auto;
+        position: relative;
         background-color: #fff;
         border-radius: 18px;
         margin: 15px;
@@ -212,29 +219,33 @@
         flex-wrap: wrap;
 
         a {
+            width: 100%;
             text-decoration: none;
         }
 
         span {
             color: darkcyan;
             background-color: $third-color;
-            font-size: 17px;
             padding: 6px 30px;
-            font-family: $text-font;
-            font-weight: 700;
             margin: 15px 0 0 -106px;
             position: absolute;
+
+            font: {
+                size: 17px;
+                family: $text-font;
+                weight: 700;
+            }
         }
 
         img {
-            width: 100%;
+            position: relative;
             border-radius: 18px 18px 0 0;
+            width: inherit;
         }
     }
 
     .ad-info {
         width: 100%;
-        margin: 20px;
         display: flex;
         justify-content: space-between;
         align-items: center;
@@ -248,20 +259,19 @@
             padding: 2px 0;
 
             font: {
-                family: $text-font;
+                family: $main-font;
                 size: 20px;
-                weight: 800;
+                weight: 100;
             }
         }
 
         p {
+            color: #808080;
+
             font: {
                 family: $text-font;
                 size: 20px;
-                weight: 400;
             }
-
-            color:#808080;
         }
     }
 
