--- a/sass/utils/_mixins.scss
+++ b/sass/utils/_mixins.scss
@@ -59,7 +59,7 @@
         font: {
             family: $main-font;
             size: 20px;
-            weight: 500;
+            weight: 100;
         }
     }
 }
@@ -94,7 +94,7 @@
 
         font: {
             size: 30px;
-            weight: 500;
+            weight: 100;
             family: $main-font;
         }
     }
@@ -123,25 +123,25 @@
     text-overflow: ellipsis;
     white-space: nowrap;
 
-    h3 {
+    span {
         width: 99%;
         white-space: break-spaces;
         padding: 0px 0 5px 0px;
 
         font: {
-            family: $main-font;
-            size: 25px;
+            family: $text-font;
+            size: 23px;
             weight: 600;
         }
     }
 
     p {
-        margin: 0;
+        margin-top: 10px;
         color: #808080;
 
         font: {
             family: $text-font;
-            size: 20px;
+            size: 18px;
         }
     }
 }
@@ -244,14 +244,14 @@
     padding: 0 0 45px 0;
 
     h5 {
+        color: #fff;
+        padding: 45px 0 35px 20px;
+
         font: {
             family: $main-font;
             size: 35px;
             weight: 400;
         }
-
-        color: #fff;
-        padding: 45px 0 0 40px;
     }
 
     .contacts {
@@ -298,7 +298,7 @@
 
         color: #fff;
         display: flex;
-        padding: 40px 0 25px 30px;
+        padding: 30px 0 25px 15px;
     }
 
     .contacts {
@@ -308,7 +308,6 @@
         font-family: $text-font;
         flex-direction: column;
         align-items: flex-start;
-        // margin-left: 15px;
 
         p {
             position: relative;
