--- a/sass/pages/_phone-homepage.scss
+++ b/sass/pages/_phone-homepage.scss
@@ -17,7 +17,7 @@
             animation: hideLoading 2s forwards;
             position: absolute;
             bottom: 304px;
-            left: 163px;
+            left: 122px;
         }
     }
 
@@ -195,12 +195,14 @@
         background-color: $third-color;
         padding: 15px 0 50px 0;
         align-content: center;
+        align-items: center;
 
         h3 {
-            width: auto;
+            width: 90%;
+            padding: 40px 5px 10px 0px;;
 
             font: {
-                size: 25px;
+                size: 28px;
                 family: $main-font;
                 weight: 100;
             }
@@ -208,18 +210,17 @@
     }
 
     .rst-ad {
-        width: auto;
+        width: 94%;
         position: relative;
         background-color: #fff;
         border-radius: 18px;
-        margin: 15px;
+        margin: 10px 32px;
         display: flex;
         flex-direction: row;
         align-items: flex-start;
         flex-wrap: wrap;
 
         a {
-            width: 100%;
             text-decoration: none;
         }
 
@@ -238,14 +239,13 @@
         }
 
         img {
-            position: relative;
+            width: 100%;
             border-radius: 18px 18px 0 0;
-            width: inherit;
+            height: 220px;
         }
     }
 
     .ad-info {
-        width: 100%;
         display: flex;
         justify-content: space-between;
         align-items: center;
@@ -279,14 +279,14 @@
         font-size: 30px;
         color: #808080;
         position: sticky;
-        left: 665px;
+        left: 363px;
         opacity: 1;
     }
 
     .main-heart2 {
         font-size: 30px;
         position: sticky;
-        left: 10px;
+        left: 187px;
         opacity: 0;
 
         &:hover {
