--- a/css/style.css
+++ b/css/style.css
@@ -456,7 +456,6 @@ footer .fa-utensils {
     border-radius: 65px 65px 0 0;
     display: flex;
     flex-direction: column;
-    flex-wrap: wrap;
     align-content: space-around;
     align-items: stretch;
   }
@@ -474,7 +473,7 @@ footer .fa-utensils {
   .menu-section {
     display: flex;
     flex-direction: row;
-    justify-content: space-between;
+    justify-content: center;
     flex-wrap: wrap;
   }
   .menu-title {
@@ -930,7 +929,7 @@ footer .fa-utensils {
   .main-heart2 {
     font-size: 30px;
     position: sticky;
-    left: 187px;
+    left: 189px;
     opacity: 0;
   }
   .main-heart2:hover {
